# ore-gpu

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md
miner/: CMakeLists.txt  main.cpp
miner/gpu/: kernel.cu
miner/sass/: compiler.cpp  compiler.h  translator.cpp  translator.h
miner/tests/: test_sass.cpp
